[gd_scene load_steps=2 format=3 uid="uid://clobby00001"]

[ext_resource type="Script" path="res://scripts/lobby/lobby.gd" id="1"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.06, 0.06, 0.1, 1)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -150.0
offset_right = 350.0
offset_bottom = 150.0
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
text = "Ship Hangar"
horizontal_alignment = 1

[node name="FactionLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Faction: Loading..."
horizontal_alignment = 1

[node name="ShipContainer" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="StatusLabel" type="Label" parent="VBox"]
layout_mode = 2
horizontal_alignment = 1
